# ceresforge

./: .gitignore  Cargo.toml  Containerfile  README.md
frontend/: home.html  main.css  ws-demo.css  ws-demo.html  ws-demo.js
src/: main.rs  ws.rs
src/api/: error.rs  mod.rs  ws.rs
src/auth/: mod.rs
src/forgejo/: mod.rs
src/github/: mod.rs
src/webfinger/: mod.rs
