[package]
name = "ceresforge"
version = "0.0.2-dev"
edition = "2024"
description = "A web platform for learning, creating, and testing software"
license = "MPL-2.0"

[dependencies]
axum = "0.8.1"
hmac = "0.12.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.2"
tower = { version = "0.5.2", features = ["util"] }
