[package]
name = "ceresforge"
version = "0.0.2-dev"
edition = "2024"
rust-version = "1.87"
description = "A web platform for learning, creating, and testing software"
license = "MPL-2.0"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
clap = { version = "4.5.40", features = ["derive"] }
futures = "0.3.31"
hmac = "0.12.1"
quick-xml = "0.37.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }
